--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "New Window With Tabs To Right",
   "version": "1.0.1",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "This extension creates a new window with the tabs to the right of the currently selected tab.",
   "homepage_url": "http://devalias.net/dev/chrome-extensions/",
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+  "default_locale": "en",
   "permissions": [
     "tabs",
     "contextMenus"
@@ -14,29 +14,23 @@
     "48": "icons/NewWindowWithTabsToRight-Icon@48px.png",
     "128": "icons/NewWindowWithTabsToRight-Icon@128px.png"
   },
-  "default_locale": "en",
   "background": {
-    "scripts": [
-      "js/googleAnalytics.js",
-      "js/chromeExtensionApiAbstractions.js",
-      "src/bg/background.js"
-    ],
-    "persistent": true
+    "service_worker": "src/bg/background.js"
   },
   "commands": {
-      "newWindowWithCurrentAndTabsToRight": {
-          "suggested_key": {
-              "default": "Ctrl+Shift+Y",
-              "mac": "Command+Shift+Y"
-          },
-          "description": "Create a new window with the current tab and tabs on the right."
+    "newWindowWithCurrentAndTabsToRight": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Y",
+        "mac": "Command+Shift+Y"
       },
-      "newWindowWithTabsToRight": {
-          "suggested_key": {
-              "default": "Ctrl+Shift+U",
-              "mac": "Command+Shift+U"
-          },
-          "description": "Create a new window with the tabs on the right."
-      }
+      "description": "Create a new window with the current tab and tabs on the right."
+    },
+    "newWindowWithTabsToRight": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+U",
+        "mac": "Command+Shift+U"
+      },
+      "description": "Create a new window with the tabs on the right."
+    }
   }
 }
